Renamed function, added readme

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <script src="/browser.js"></script>
     </head>
     <body>
-      <div>Run handleClick() in console</div>
+      <div>Run check() in console</div>
     </body>
 </html>
